<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eduardobachiega.hackindebt.view.SelectPlayerActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/pj"
        android:layout_marginLeft="17dp"
        app:layout_constraintLeft_toLeftOf="@+id/ibPJ"
        android:layout_marginRight="17dp"
        app:layout_constraintRight_toRightOf="@+id/ibPJ"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:id="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ibPJ"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <!--TODO: ADD RIPPLE(V21) AND BACKGROUND-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/pf"
        app:layout_constraintLeft_toLeftOf="@+id/ibPF"
        app:layout_constraintRight_toRightOf="@+id/ibPF"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginEnd="17dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ibPF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ibPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:src="@drawable/vd_pf"
        android:background="#00000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--TODO: ADD RIPPLE(V21) AND BACKGROUND-->
    <ImageButton
        android:id="@+id/ibPJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="190dp"
        android:src="@drawable/vd_pj"
        android:background="#00000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_player"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ibPF"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ibPJ"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ibPJ"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
